// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`requestAction should use provided key if three params are provided 1`] = `
{
  "meta": {
    "API_REQUEST": "TEST_KEY",
  },
  "payload": {
    "url": "http://api.example.com",
  },
  "type": "TEST_ACTION",
}
`;

exports[`requestAction should use type as key if two params are provided 1`] = `
{
  "meta": {
    "API_REQUEST": "TEST_ACTION",
  },
  "payload": {
    "url": "http://api.example.com",
  },
  "type": "TEST_ACTION",
}
`;
